grid rows styles
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@730 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -204,6 +204,12 @@ input, textarea {
    color: #333333;
    text-decoration: none;
 }
+.sticky-wrapper .grid a,
+.sticky-wrapper .grid a:visited,
+.yui-panel-container .grid a,
+.yui-panel-container .grid a:visited {
+   text-decoration: underline;
+}
 
 .sticky-wrapper a:hover,
 .sticky-footer a:hover,
