datepicker style fix
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@735 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -440,6 +440,10 @@ h4 .lighter
 .yui-skin-lecmTheme .yui-panel div.form-fields div {
     text-align: left;
 }
+.yui-skin-lecmTheme .yui-panel div.form-fields div.datepicker,
+.yui-skin-lecmTheme .yui-panel div.form-fields div.datepicker div {
+    text-align: center;
+}
 .yui-skin-lecmTheme .yui-panel div.form-field {
     line-height: 25px;
     vertical-align: middle;
@@ -479,7 +483,7 @@ h4 .lighter
     vertical-align: middle;
     margin: auto 0;
 }
-.yui-skin-lecmTheme .yui-panel div.form-field > div:not(.viewmode-field) {
+.yui-skin-lecmTheme .yui-panel div.form-field > div:not(.viewmode-field):not(.datepicker) {
     width: 36em;
     float: right;
     margin: 0;
