work-groups grid style fix
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@738 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-orgstructure/share/src/main/webapp/css/lecm-orgstructure/orgstructure-work-groups.css
+++ b/lecm-orgstructure/share/src/main/webapp/css/lecm-orgstructure/orgstructure-work-groups.css
@@ -16,3 +16,6 @@
 #orgstructure-work-groups #alf-filters .toolbar.datalist-toolbar .header-bar {
     min-width: 400px;
 }
+#orgstructure-work-groups #alf-filters .grid tr.yui-dt-highlighted {
+    cursor: pointer;
+}
