В контролах сделаны ссылки просмотра для employee
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@759 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -207,7 +207,11 @@ input, textarea {
 .sticky-wrapper .grid a,
 .sticky-wrapper .grid a:visited,
 .yui-panel-container .grid a,
-.yui-panel-container .grid a:visited {
+.yui-panel-container .grid a:visited,
+.sticky-wrapper .person a,
+.sticky-wrapper .person a:visited,
+.yui-panel-container .person a,
+.yui-panel-container .person a:visited{
    text-decoration: underline;
 }
 
@@ -1873,4 +1877,15 @@ div.orgchart-picker-menu .search-input {
     width: 100%;
     float: none;
     padding: 0;
+}
+
+span.person
+{
+	background: url(../../components/images/filetypes/generic-user-16.png) no-repeat;
+}
+
+span.person a
+{
+	display: inline-block;
+	margin-left: 20px;
 }
