--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -476,6 +476,7 @@ h4 .lighter
 .yui-skin-lecmTheme .yui-panel div.form-field textarea,
 .yui-skin-lecmTheme .yui-panel div.form-field > div:not(.viewmode-field):not(.datepicker) {
     width: 470px;
+    max-width: 100%;
     float: right;
     clear: none;
     -moz-box-sizing: border-box;
