--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -75,6 +75,8 @@ input, textarea, a {
     border-right: 1px solid #999;
 }
 #bd #lecm-content-main {
+    width: 100%;
+    float: left;
     margin: 0 5px;
     padding-bottom: 30px;
 }
