--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -404,6 +404,9 @@ h4 .lighter
     border-bottom: medium none;
     /*box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.7);*/
 }
+.yui-skin-lecmTheme .yui-panel .search {
+    margin: 0;
+}
 
 .yui-skin-lecmTheme .mask {
     opacity: 0.4;
