ALF-220 - иконка экспорта
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@782 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-base/share/src/main/webapp/css/lecm-base/components/datagrid.css
+++ b/lecm-base/share/src/main/webapp/css/lecm-base/components/datagrid.css
@@ -4,5 +4,5 @@
     cursor: pointer;
 }
 .datagrid .onActionExportXML a {
-    background-image: url("../../images/lecm-dictionary/xml-file-16.png");
+    background-image: url("../../../images/lecm-dictionary/xml-file-16.png");
 }
