ALF-253 - styles fix
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@809 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-base/share/src/main/webapp/css/lecm-base/components/object-finder/lecm-object-finder.css
+++ b/lecm-base/share/src/main/webapp/css/lecm-base/components/object-finder/lecm-object-finder.css
@@ -188,9 +188,9 @@
 {
 }
 
-.object-finder .picker-header .search
-{
-   display: none;
+.object-finder .picker-header div.search {
+    display: none;
+    float: none;
 }
 
 .object-finder .picker-header .search .search-input
