--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -401,8 +401,11 @@ h4 .lighter
     z-index: 100;
 }
 .yui-skin-lecmTheme .yui-panel {
-    border-bottom: medium none;
-    /*box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.7);*/
+    background: #fff;
+    border-style: solid;
+    border-color: #888;
+    border-width: 0 1px;
+    border-radius: 5px;
 }
 .yui-skin-lecmTheme .yui-panel .search {
     margin: 0;
@@ -467,7 +470,7 @@ h4 .lighter
     float: left;
 }
 .yui-skin-lecmTheme .yui-panel div.form-field label {
-    max-width: 10em;
+    max-width: 110px;
     float: left;
     clear: none;
     vertical-align: middle;
@@ -480,7 +483,7 @@ h4 .lighter
 .yui-skin-lecmTheme .yui-panel div.form-field select,
 .yui-skin-lecmTheme .yui-panel div.form-field textarea,
 .yui-skin-lecmTheme .yui-panel div.form-field > div:not(.viewmode-field):not(.datepicker) {
-    width: 470px;
+    width: 460px;
     max-width: 100%;
     float: right;
     clear: none;
@@ -523,8 +526,24 @@ h4 .lighter
 .yui-skin-lecmTheme .yui-panel .bd {
     color: #333;
     background-color: #fff;
-    border: 1px solid #888;
-    border-top: none;
+    border: none;
+    border-radius: 0 0 5px 5px;
+    margin: 0;
+}
+
+.yui-skin-lecmTheme .yui-panel.object-finder .bd {
+    color: #333;
+    background-color: #fff;
+    border: none;
+    margin: 0 5px;
+}
+
+.yui-skin-lecmTheme .yui-panel.object-finder .bd .picker-header {
+    padding: 5px 0;
+}
+
+.yui-skin-lecmTheme .yui-panel.object-finder .bd .bdft {
+    margin: 1em -5px 0;
     border-radius: 0 0 5px 5px;
 }
 
@@ -535,7 +554,7 @@ h4 .lighter
 
 .yui-resize-handle.yui-resize-handle-r
 {
-	margin-right: -4px;
+	margin-right: -5px;
 }
 
 /* Data Lists: DataTable (Needs to appear before yui-dt-highlighted rule) */
