зависимость от оргструктуры сделал provided две формы для настройки параметров делегирования объединил в одну target ignore добавил в css-ку стили для того чтобы радиобатоны на формах можно было рисовать
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@887 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -1925,3 +1925,22 @@ span.person a
 #searchBlock .right {
 	float: right;
 }
+
+.form-container input[type="radio"]
+{
+	width: auto;
+}
+
+.form-container label.radio
+{
+	clear: both;
+	display: inline;
+	margin-left: 0.2em;
+	vertical-align: top;
+}
+
+/* for IE6 */
+.form-container .formsRadio
+{
+	width: auto;
+}
