ALF-286: Добавлена старница с подписками на экземпляры ALF-283: Добавлен аспект для подписки на экземпляр
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@889 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-subscriptions/share/src/main/webapp/css/lecm-subscriptions/subscriptions-toolbar.css
+++ b/lecm-subscriptions/share/src/main/webapp/css/lecm-subscriptions/subscriptions-toolbar.css
@@ -10,7 +10,7 @@
 	background: url('/share/res/components/images/search-16-gray.png') no-repeat 5px 5px;
 }
 .datalist-toolbar .ex-search span.first-child {
-	background: url('/share/res/components/images/search-16-gray.png') no-repeat 5px 5px;
+	background: url('../../images/lecm-base/components/base/alf_base_filter_16.png') no-repeat 5px 5px;
 }
 .search-input {
 	display: inline-block;
