Добавлен контрол с флажками для ассоциаций
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@933 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -1781,6 +1781,7 @@ span.tree-picker-button .yui-button .first-child button {
 /* currentValueDisplay */
 
 div.form-field input[type="text"],
+div.form-field ul,
 div.current-values,
 div.currentValueDisplay,
 div.autocompleteCurrentValueDisplay,
