Подписки по типу. Добавленны групповые операции.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@989 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-subscriptions/share/src/main/webapp/css/lecm-subscriptions/subscriptions-toolbar.css
+++ b/lecm-subscriptions/share/src/main/webapp/css/lecm-subscriptions/subscriptions-toolbar.css
@@ -43,3 +43,6 @@
 	outline: none;
 	padding-right: 0;
 }
+.datalist-toolbar .delete-row button {
+	background: url(/share/res/components/images/delete-row-16.png) no-repeat 5px 5px;
+}
