--- a/lecm-business-journal/share/src/main/webapp/css/dashlets/dashlet-business-journal.css
+++ b/lecm-business-journal/share/src/main/webapp/css/dashlets/dashlet-business-journal.css
@@ -1,20 +1,13 @@
 .dashlet.business-journal a,
 .dashlet.business-journal a:hover,
 .dashlet.business-journal a:visited {
-    color: #05c;
+    color: #0600cc;
 }
 .dashlet.business-journal .controls {
     padding: 10px 5px;
 }
 .dashlet.business-journal .controls form {
     white-space: nowrap;
-}
-.dashlet.business-journal .controls select {
-    width: 30%;
-    margin-right: 4%;
-}
-.dashlet.business-journal .controls select:last-of-type {
-    margin-right: 0;
 }
 .dashlet.business-journal .results {
     margin: 5px;
