--- a/lecm-delegation/share/src/main/webapp/css/lecm-delegation/delegation-toolbar.css
+++ b/lecm-delegation/share/src/main/webapp/css/lecm-delegation/delegation-toolbar.css
@@ -10,7 +10,7 @@
     background: url('/share/res/components/images/search-16-gray.png') no-repeat 5px 5px;
 }
 .datalist-toolbar .ex-search span.first-child {
-    background: url('/share/res/components/images/search-16-gray.png') no-repeat 5px 5px;
+    background: url('../../images/lecm-base/components/base/alf_base_filter_16.png') no-repeat 5px 5px;
 }
 .search-input {
     display: inline-block;
@@ -23,4 +23,23 @@
     background: url("../images/search-16.png") no-repeat scroll 12px 4px transparent;
     padding-left: 24px;
     text-align: center;
+}
+
+.datalist-toolbar .clear-search span {
+	background: url("/share/res/components/images/delete-disabled-16.png") no-repeat scroll 0 0 transparent;
+	padding-right: 16px;
+}
+.datalist-toolbar .search-input {
+	display: inline-block;
+	vertical-align: text-bottom;
+	margin-top: 4px;
+	background-color: white;
+	border: 1px solid #CCC;
+	border-radius: 3px;
+	line-height: 0;
+}
+.datalist-toolbar .search-input input {
+	border: 0;
+	outline: none;
+	padding-right: 0;
 }
