Business journal dashlet (фильтрация пока только по дате)
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1041 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-business-journal/share/src/main/webapp/css/dashlets/dashlet-business-journal.css
+++ b/lecm-business-journal/share/src/main/webapp/css/dashlets/dashlet-business-journal.css
@@ -10,7 +10,7 @@
     white-space: nowrap;
 }
 .dashlet.business-journal .results {
-    margin: 5px;
+    margin: 10px 20px 10px 10px;
 }
 .dashlet.business-journal .results .row {
     line-height: 24px;
