[ALF-299]  -  Экспорт лога
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1046 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-business-journal/share/src/main/webapp/css/lecm-business-journal/business-journal-toolbar.css
+++ b/lecm-business-journal/share/src/main/webapp/css/lecm-business-journal/business-journal-toolbar.css
@@ -25,6 +25,13 @@
     text-align: center;
 }
 
+.datalist-toolbar .exportcsv button {
+    background: url(/share/res/components/images/task-16.png) no-repeat 5px 5px;
+}
+.datalist-toolbar .delete-row button {
+    background: url(/share/res/components/images/delete-row-16.png) no-repeat 5px 5px;
+}
+
 .datalist-toolbar .clear-search span {
     background: url("/share/res/components/images/delete-disabled-16.png") no-repeat scroll 0 0 transparent;
     padding-right: 16px;
