[+] ALF-301 - Архивация лога
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1074 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-business-journal/share/src/main/webapp/css/lecm-business-journal/business-journal-toolbar.css
+++ b/lecm-business-journal/share/src/main/webapp/css/lecm-business-journal/business-journal-toolbar.css
@@ -32,6 +32,10 @@
     background: url(/share/res/components/images/delete-row-16.png) no-repeat 5px 5px;
 }
 
+.datalist-toolbar .archive-row button {
+    background: url(/share/res/components/images/delete-row-16.png) no-repeat 5px 5px;
+}
+
 .datalist-toolbar .clear-search span {
     background: url("/share/res/components/images/delete-disabled-16.png") no-repeat scroll 0 0 transparent;
     padding-right: 16px;
