ALF-315: Получения информации о количестве непрочитанных уведомлений активного канала
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1080 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -131,11 +131,11 @@ ol, ol li {
 }
 /* Utils: end */
 
-#myElem {
+#notificationsCounter {
     position: absolute;
     float: left;
     top: 15px;
-    left: 300px;
+    left: 453px;
     color: yellow;
     width: 20px;
     height : 20px;
