[~] сохранение ссылок в записи БЖ [~] вывод ссылок
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1086 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-business-journal/share/src/main/webapp/css/lecm-business-journal/business-journal-toolbar.css
+++ b/lecm-business-journal/share/src/main/webapp/css/lecm-business-journal/business-journal-toolbar.css
@@ -54,3 +54,9 @@
     outline: none;
     padding-right: 0;
 }
+
+.datalist-toolbar .archive-rows span.first-child
+{
+    background: url('/share/res/components/images/delete-row-16.png') no-repeat 12px 4px;
+    padding-left: 24px;
+}
