ALF-316: Добавлено всплывающее окно с уведомлениями активного канала
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1087 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -1952,6 +1952,13 @@ span.person a
 	width: auto;
 }
 
+.notification-row {
+	border-bottom: solid 1px #808080;
+	padding-left: 10px;
+	padding-right: 10px;
+	padding-top: 10px;
+}
+
 .archive-record, .archive-record span a {
     color:red;
 }
