Комит затрагиват только Мессенджер!!!! В очередной раз спихиваю в SVN  все изменения, что бы иметь возможность если что откатиться.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1089 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-im/lib/src/main/resources/ru/it/lecm/im/public/standard/iJab.css
+++ b/lecm-im/lib/src/main/resources/ru/it/lecm/im/public/standard/iJab.css
@@ -1,3 +1,17 @@
+#ijab {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 400px;
+    height: 500px;
+/*    background-color: red;*/
+}
+
+.ijab-mainwidget{
+    width: 25%;
+    display: inline-block;
+}
+
 .has-unread-messages{
     font-weight: bold;
 }
@@ -738,7 +752,9 @@ background: url(about:blank);
 }
 
 .ijab-panels {
-    float: left;
+    display: inline-block;
+    overflow: hidden;
+    width: 75%;
 }
 
 .ijab-webapi .ijab-window {
