--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -1953,12 +1953,12 @@ span.person a
 }
 
 .notification-row {
-	border-bottom: solid 1px #808080;
-	padding-left: 10px;
-	padding-right: 10px;
-	padding-top: 10px;
+    border-bottom: solid 1px #808080;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 10px;
 }
 
-.archive-record, .archive-record span a {
+.archive-record, .archive-record span a, .archive-record a {
     color:red;
 }
