несколько поправил верстку карточки с настройками делегирования
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1103 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -1952,6 +1952,11 @@ span.person a
 	width: auto;
 }
 
+.yui-skin-lecmTheme .yui-panel div.form-field label.radio {
+    line-height: 25px;
+    float: none;
+}
+
 .notification-row {
     border-bottom: solid 1px #808080;
     padding-left: 10px;
