--- a/lecm-business-journal/share/src/main/webapp/css/dashlets/dashlet-business-journal.css
+++ b/lecm-business-journal/share/src/main/webapp/css/dashlets/dashlet-business-journal.css
@@ -16,5 +16,6 @@
     margin: 10px 20px 10px 10px;
 }
 .dashlet.business-journal .results .row {
-    line-height: 24px;
+	line-height: 16px;
+	margin: 10px 0;
 }                                                                                                                       `
