[+] ALF-303 Автоматическая архивация бизнес-журнала
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1132 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-base/share/src/main/webapp/css/lecm-base/components/base-menu/base-menu.css
+++ b/lecm-base/share/src/main/webapp/css/lecm-base/components/base-menu/base-menu.css
@@ -43,3 +43,10 @@
 #lecm-menu #menu-buttons #menu-buttons-dictionariesBtn span.first-child {
     background: url('/share/res/images/lecm-dictionary/dictionary_32.png') no-repeat 4px 4px;
 }
+
+#lecm-menu #menu-buttons #menu-buttons-bj-summaryBtn span.first-child {
+    background: url('/share/res/images/lecm-dictionary/dictionary_32.png') no-repeat 4px 4px;
+}
+#lecm-menu #menu-buttons #menu-buttons-bj-settingsBtn span.first-child {
+    background: url('/share/res/images/lecm-dictionary/dictionary_32.png') no-repeat 4px 4px;
+}
