--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -1978,6 +1978,6 @@ span.person a
 	text-align: center;
 }
 
-.archive-record, .archive-record span a {
+.archive-record, .archive-record span a, .archive-record a {
     color:red;
 }
