Business journal dashlet
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1133 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-business-journal/share/src/main/webapp/css/dashlets/dashlet-business-journal.css
+++ b/lecm-business-journal/share/src/main/webapp/css/dashlets/dashlet-business-journal.css
@@ -6,10 +6,7 @@
 .dashlet.business-journal.yui-resize .yui-resize-handle {
     z-index: 0;
 }
-.dashlet.business-journal .controls {
-    padding: 2px 5px;
-}
-.dashlet.business-journal .controls form {
+.dashlet.business-journal .toolbar {
     white-space: nowrap;
 }
 .dashlet.business-journal .results {
