Комит затрагиват только Мессенджер!!!! В очередной раз спихиваю в SVN  все изменения, что бы иметь возможность откатиться после того как я всё сломаю.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1139 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-im/lib/src/main/resources/ru/it/lecm/im/public/standard/iJab.css
+++ b/lecm-im/lib/src/main/resources/ru/it/lecm/im/public/standard/iJab.css
@@ -24,6 +24,27 @@
     float: right;
 }
 
+.height-flood {
+    height: 100%;
+}
+
+.height-flood > .ijab-window-content{
+    height: 100%;
+}
+
+.height-flood > .ijab-chat{
+    height: 100%;
+}
+
+.height-flood  .ijab-chat-content{
+    height: 100%;
+}
+
+.ijab-chat-actions.pull-down{
+    position: absolute;
+    bottom: 0;
+}
+
 .has-unread-messages{
     font-weight: bold;
 }
@@ -853,7 +874,7 @@ margin: .3em .5em .3em;
     font-weight: normal;
 }
 
-.ijab-webapi .ijab-window-minimize .ijab-window-window {
+.ijab-window-minimize.ijab-window{
     display: none;
 }
 
