ограничение доступа на страницу параметров делегирования
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1140 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -1957,6 +1957,11 @@ span.person a
     float: none;
 }
 
+.yui-skin-lecmTheme .yui-panel div.form-field input[type='radio'] {
+    vertical-align: middle;
+    margin: auto 0;
+}
+
 .notification-row {
 	border-bottom: solid 1px #C5C7C6;
 	padding-left: 10px;
