Мессенджер - ограничил максимальную высоту списка контактов
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@1142 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-im/lib/src/main/resources/ru/it/lecm/im/public/standard/iJab.css
+++ b/lecm-im/lib/src/main/resources/ru/it/lecm/im/public/standard/iJab.css
@@ -1043,6 +1043,7 @@ margin: .3em .5em .3em;
 {
     overflow-x:hidden;
     overflow-y:auto;
+    max-height: 325px;
 }
 
 .ijab-contactview-grouphead
