--- a/lecm-business-journal/share/src/main/webapp/css/dashlets/dashlet-business-journal.css
+++ b/lecm-business-journal/share/src/main/webapp/css/dashlets/dashlet-business-journal.css
@@ -9,10 +9,7 @@
 .dashlet.business-journal .toolbar {
     white-space: nowrap;
 }
-.dashlet.business-journal .results {
-    margin: 10px 20px 10px 10px;
-}
-.dashlet.business-journal .results .row {
+.dashlet.business-journal .body .row {
 	line-height: 16px;
-	margin: 10px 0;
+	margin: 10px;
 }                                                                                                                       `
