--- a/lecm-statemachine-editor/share/src/main/webapp/css/lecm-statemachine-editor/menu.css
+++ b/lecm-statemachine-editor/share/src/main/webapp/css/lecm-statemachine-editor/menu.css
@@ -1,6 +1,11 @@
 #lecm-menu .statemachine-menu #menu-buttons-new-status span.first-child {
     background: url('../../images/lecm-orgstructure/alf_orgstucture_podrazdel_32.png') no-repeat 4px 4px;
 }
+
+#lecm-menu .statemachine-menu #menu-buttons-new-end-event span.first-child {
+	background: url('../../images/lecm-orgstructure/alf_orgstucture_podrazdel_32.png') no-repeat 4px 4px;
+}
+
 #lecm-menu .statemachine-menu #menu-buttons-machine-properties span.first-child {
     background: url('../../images/lecm-orgstructure/alf_orgstucture_podrazdel_32.png') no-repeat 4px 4px;
 }
